trying to fix how it looks on safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,6 +23,7 @@
 
 .footericons {
   display: flex;
+  flex: 1 0 auto;
   justify-content: right;
   align-items: right;
 }
